syntax = "proto3";
package OmniFlix.paymentstream.streampay;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/OmniFlix/payment-stream/x/streampay/types";



message StreamPayment {
  string                    id                  = 1;
  string                    sender              = 2;
  string                    recipient           = 3;
  cosmos.base.v1beta1.Coin  total_amount        = 4 [
    (gogoproto.nullable)     = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.moretags)     = "yaml:\"total_amount\""
  ];
  PaymentType               stream_type         = 5 [(gogoproto.moretags) = "yaml:\"stream_type\""];
  int64                     lock_height         = 6 [(gogoproto.moretags) = "yaml:\"lock_height\""];
  google.protobuf.Timestamp start_time          = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime)  = true,
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];
  google.protobuf.Timestamp end_time            = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime)  = true,
    (gogoproto.moretags) = "yaml:\"end_time\""
  ];
  cosmos.base.v1beta1.Coin  total_transferred   = 9 [
    (gogoproto.nullable)     = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.moretags)     = "yaml:\"total_transferred\""
  ];
  google.protobuf.Timestamp last_transferred_at = 10 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime)  = true,
    (gogoproto.moretags) = "yaml:\"last_transferred_at\""
  ];
}

enum PaymentType {
  option (gogoproto.goproto_enum_prefix) = false;

  PAYMENT_TYPE_DELAYED                   = 0 [(gogoproto.enumvalue_customname) = "TypeDelayed"];
  PAYMENT_TYPE_CONTINUOUS                = 1 [(gogoproto.enumvalue_customname) = "TypeContinuous"];
  PAYMENT_TYPE_PERIODIC                  = 2 [(gogoproto.enumvalue_customname) = "TypePeriodic"];
}

enum PaymentStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  PAYMENT_STATUS_OPEN                    = 0 [(gogoproto.enumvalue_customname) = "StatusOpen"];
  PAYMENT_STATUS_COMPLETED               = 1 [(gogoproto.enumvalue_customname) = "StatusCompleted"];
  PAYMENT_STATUS_CANCELLED               = 2 [(gogoproto.enumvalue_customname) = "StatusCancelled"];
}